Legendre functions tikz started

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -414,7 +414,7 @@ The solution to the azimuthal angle ODE is given by
 \end{equation*}
 where $m_\ell$ is the \textbf{magnetic quantum number}
 \begin{equation*}
-    m_\ell \in \mathcal{Z}
+    m_\ell \in \mathbb{Z}
 \end{equation*}
 
 \newpar{}
@@ -426,9 +426,12 @@ The solution to the polar angle ODE is given by
 \end{equation*}
 where $A$ is a constant, $\ell$ is the \textbf{azimuthal quantum number} and $P_{\ell}^{m_\ell}(x)$ are the \textbf{associated Legendre functions}.
 \begin{equation*}
-    \ell \in \mathcal{N}_0 \quad \text{and} \quad |m_\ell| \leq \ell
+    \ell \in \mathbb{N}_0 \quad \text{and} \quad |m_\ell| \leq \ell
 \end{equation*}
+
 \includegraphics[width=\linewidth]{associated_Legendre_functions_temp.png}
+
+\input{plots/legendre_functions.tex}
 
 \newpar{}
 \ptitle{Angular Solutions}
