added orbit plot

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -562,6 +562,10 @@ where the quantum numbers are in the ranges of
     \item $m_l$ is responsible for the magnetic splitting of spectral lines i.e.\ the \textit{Zeeman effect}
 \end{itemize}
 
+\begin{center}
+    \includegraphics[width=\linewidth]{orbit_plots/hydrogen_orbit.jpg}
+\end{center}
+
 \newpar{}
 \ptitle{Energies}
 
