--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -168,3 +168,93 @@ Distance between atoms:
          & \int_{0}^{a} x\sin\left(\frac{\pi}{x}x\right)\sin\left(\frac{2\pi}{x}x\right)\; dx &  & = -\frac{8a^2}{9\pi^2}
     \end{align*}
 \end{footnotesize}
+
+\subsection{Solution Table}
+
+\subsubsection{Laguerre Polynomials}
+\noindent\begin{equation*}
+    L_q(x)\equiv\frac{e^x}{q!}{\left(\frac d{dx}\right)}^q\left(e^{-x}x^q\right)
+\end{equation*}
+\noindent\begin{align*}
+    L_{0} & =1                                          \\
+    L_{1} & =-x+1                                       \\
+    L_{2} & =x^2-4x+2                                   \\
+    L_{3} & =-x^3+9x^2-18x+6                            \\
+    L_{4} & =x^4-16x^3+72x^2-96x+24                     \\
+    L_{5} & =-x^5+25x^4-200x^3+600x^2-600x+120          \\
+    L_{6} & =x^6-36x^5+450x^4-2400x^3+5400x^2-4320x+720
+\end{align*}
+
+\subsubsection{Associated Laguerre Polynomials}
+\noindent\begin{equation*}
+    L_{q}^{p}(x)\equiv{(-1)}^{p}{\left(\frac{d}{dx}\right)}^{p}L_{p+q}(x)
+\end{equation*}
+\noindent\begin{align*}
+    L_0^0 & =1           & L_{0}^{2} & =2               \\
+    L_1^0 & =-x+1        & L_1^2     & =-6x+18          \\
+    L_2^0 & =x^2-4x+2    & L_2^2     & =12x^2-96x+144   \\
+    L_0^1 & =1           & L_0^3     & =6               \\
+    L_1^1 & =-2x+4       & L_1^3     & =-24x+96         \\
+    L_2^1 & =3x^2-18x+18 & L_2^3     & =60x^2-600x+1200
+\end{align*}
+
+\subsubsection{Legendre Polynomials}
+\noindent\begin{equation*}
+    P_l(x)=\frac1{2^l\cdot l!}{\left(\frac d{dx}\right)}^l{\left(x^2-1\right)}^l
+\end{equation*}
+\noindent\begin{align*}
+    P_{0} & =1                                \\
+    P_{1} & =x                                \\
+    P_{2} & =\frac{1}{2}(3x^{2}-1)            \\
+    P_{3} & =\frac{1}{2}(5x^{3}-3x)           \\
+    P_{4} & =\frac{1}{8}(35x^{4}-30x^{2}+3)   \\
+    P_{5} & =\frac{1}{8}(63x^{5}-70x^{3}+15x)
+\end{align*}
+
+\subsubsection[Associated Legendre Functions for cos]{Associated Legendre Functions for $x=\cos\theta$}
+\noindent\begin{equation*}
+    P_l^m(x)={(1-x^2)}^{\frac{|m|}2}{\left(\frac d{dx}\right)}^{|m|}\cdot P_l(x)
+\end{equation*}
+\noindent\begin{align*}
+    P_{0}^{0} & =1                       & P_{2}^{0} & =\frac{1}{2}(3 \cos^{2}\theta-1)             \\
+    P_{1}^{1} & =-\sin\theta             & P_{3}^{3} & =-15 \sin\theta(1-\cos^{2}\theta)            \\
+    P_{1}^{0} & =\cos\theta              & P_{3}^{2} & =15 \sin^{2}\theta \cos\theta                \\
+    P_{2}^{2} & =3 \sin^{2}\theta        & P_{3}^{1} & =-\frac{3}{2}\sin\theta (5 \cos^{2}\theta-1) \\
+    P_{2}^{1} & =-3 \sin\theta\cos\theta & P_{3}^{0} & =\frac{1}{2} (5 \cos^{3}\theta-3 \cos\theta)
+\end{align*}
+
+\subsubsection{Spherical Harmonics}
+\noindent\begin{equation*}
+    Y_{\ell}^{m_\ell}(\theta, \phi) = \epsilon\sqrt{\frac{2\ell+1}{4\pi}\frac{(\ell-|m_\ell|)!}{(\ell+|m_\ell|)!}}\:e^{im_\ell\phi}\:P_{\ell}^{m_\ell}(\cos(\theta))
+\end{equation*}
+\noindent\begin{align*}
+    Y_0^0      & = {\left(\frac1{4\pi}\right)}^{\frac12}                                                   \\
+    Y_1^0      & = {\left(\frac{3}{4\pi}\right)}^{\frac{1}{2}}\cos\theta                                   \\
+    Y_1^{\pm1} & = \mp{\left(\frac{3}{8\pi}\right)}^{\frac{1}{2}}\sin\theta\cdot e^{\pm i\varphi}          \\
+    Y_2^0      & = {\left(\frac{5}{16\pi}\right)}^{\frac{1}{2}}(3\cos^2\theta-1)                           \\
+    Y_2^{\pm1} & = \mp{\left(\frac{15}{8\pi}\right)}^{\frac12}\sin\theta\cos\theta\cdot e^{\pm i\varphi}   \\
+    Y_2^{\pm2} & = {\left(\frac{15}{32\pi}\right)}^{\frac12}\sin^2\theta\cdot e^{\pm2i\varphi}             \\
+    Y_3^0      & = {(\frac7{16\pi})}^{\frac12}(5\cos^3\theta-3\cos\theta)                                  \\
+    Y_3^{\pm1} & = \mp{\left(\frac{21}{64\pi}\right)}^{\frac12}\sin\theta(5\cos^2\theta-1)e^{\pm i\varphi} \\
+    Y_3^{\pm2} & = {(\frac{105}{32\pi})}^{\frac12}\sin^2\theta\cos^2\theta\cdot e^{\pm2i\varphi}           \\
+    Y_3^{\pm3} & = \mp{\left(\frac{35}{64\pi}\right)}^{\frac12}\sin^3\theta\cdot e^{\pm3i\varphi}
+\end{align*}
+
+\subsubsection{Radial Wave Functions for Hydrogen}
+\noindent\begin{align*}
+    R_{n\ell}(r) = & \sqrt{{\left(\frac{2}{na}\right)}^3\frac{(n-\ell-1)!}{2n{[(n+\ell)!]}^3}} \ldots                    \\
+                   & \ldots\exp\left(\frac{-r}{na}\right){\left(\frac{2r}{na}\right)}^\ell L_{n-\ell-1}^{2\ell+1}(2r/na)
+\end{align*}
+
+\begin{align*}
+     & R_{10} = 2a^{-3/2}\exp(-r/a)                                                                                                                              \\[1.5em]
+     & R_{20} = \frac{1}{\sqrt{2}}a^{-3/2}\left(1-\frac12\frac ra\right)\exp(-r/2a)                                                                              \\
+     & R_{21} = \frac{1}{2\sqrt{6}}a^{-3/2}\left(\frac ra\right)\exp(-r/2a)                                                                                      \\[1.5em]
+     & R_{30} = \frac{2}{3\sqrt{3}}a^{-3/2}\left(1-\frac23\frac ra+\frac2{27}{\left(\frac ra\right)}^2\right)\exp(-r/3a)                                         \\
+     & R_{31} = \frac{8}{27\sqrt{6}}a^{-3/2}\left(1-\frac16\frac ra\right)\left(\frac ra\right)\exp(-r/3a)                                                       \\
+     & R_{32} = \frac{4}{81\sqrt{30}}a^{-3/2}{\left(\frac ra\right)}^2\exp(-r/3a)                                                                                \\[1.5em]
+     & R_{40} = \frac{1}{4} a^{-3/2}\left(1-\frac34\frac ra+\frac18{\left(\frac ra\right)}^2-\frac1{192}{\left(\frac ra\right)}^3\right)\exp(-r/4a)              \\
+     & R_{41} = \frac{5}{16\sqrt{15}}a^{-3/2}\left(1-\frac{1}{4}\frac{r}{a}+\frac{1}{80}{\left(\frac{r}{a}\right)}^{2}\right)\left(\frac{r}{a}\right)\exp(-r/4a) \\
+     & R_{42} = \frac{1}{64\sqrt{5}}a^{-3/2}\left(1-\frac1{12}\frac ra\right){\left(\frac ra\right)}^2\exp(-r/4a)                                                \\
+     & R_{43} = \frac{1}{768\sqrt{35}}a^{-3/2}{\left(\frac ra\right)}^3\exp(-r/4a)
+\end{align*}
