--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -77,7 +77,7 @@ In short: If a state fulfils the eigenvalue equation, every measurement will yie
 \end{itemize}
 
 \subsection{Eigenfunctions of a Hermitian Operator}
-Eigenfunctions of hermitian operators can either have a discrete or continuous spectrum. For a discrete spectrum there are countably many eigenfunction whereas for a continuous the set of eigenfunctions is discrete as well.
+Eigenfunctions of hermitian operators can either have a discrete or continuous spectrum.
 
 \newpar{}
 \ptitle{Discrete Spectrum}
@@ -96,12 +96,12 @@ If $\psi_n$ are solutions to $\hat{Q}\psi_n=q\psi_n$ then
     \item $|\psi_n\rangle$ can be thought of as basis vectors
 \end{itemize}
 
-\ptitle{continuous Spectrum}
+\ptitle{Continuous Spectrum}
 
 \begin{itemize}
-    \item Eigenfunctions with a continuous spectrum are not normalizable
+    \item Eigenfunctions with a continuous spectrum are not normalizable ($\notin \mathcal{H}$)
     \item The eigenfunctions appear as continuous set (e.g.\ free particle)
-    \item These eigenfuntions with real eigenvalues are \textit{Dirac-orthonormalizable} and form a \textbf{complete set}.
+    \item These eigenfunctions with real eigenvalues are \textit{Dirac-orthonormalizable} and form a \textbf{complete set}.
     \item In contrast to the discrete spectrum case where we had $\langle f_m|f_n\rangle=\delta_{mn}$ we now have
           \noindent\begin{equation*}
               \langle f_{x'}|f_{x''}\rangle=\delta(x''-x')
