started midterm summary

--- a/src/main.tex
+++ b/src/main.tex
@@ -17,6 +17,8 @@
     \input{sections/03_Formalism.tex}
     \newpage
     \input{sections/Appendix.tex}
+    \newpage
+    \input{sections/midterm.tex}
     
 \end{multicols*}
 \end{document}
