--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -53,9 +53,9 @@ If $\widehat{A}$ and $\widehat{B}$ do not commute, $\left[\widehat{A},\widehat{B
 
 \newpar{}
 
-\ptitle{Canonical Commutation Relation}
+\ptitle{Canonical Commutation Relations}
 
-\begin{align*}
+\noindent\begin{align*}
     \left[\widehat{x},\widehat{p}_x\right]    & = i\hbar  \\
     \left[\widehat{p}_x, \widehat{x}\right]   & = -i\hbar \\
     \left[\widehat{x}, \widehat{y}\right]     & = 0       \\
